# apertium-jpn-eng

./: Makefile.am  README  apertium-jpn-eng.jpn-eng.dix  configure.ac  modes.xml
test/: tests.json
